k8s/jmeter_grafana_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jmeter-grafana
  labels:
    app: jmeter-grafana
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: jmeter-grafana
